# openbb-snowflake-ai

./: .gitattributes  .gitignore  .pylintrc  Cargo.toml  README.md  pyproject.toml
.github/workflows/: maturin-build.yml  wheelhouse-pr.yml
python/: README.md  pyproject.toml
python/snowflake_ai/: __init__.py  cache_manager.py  context_manager.py  conversation_manager.py  document_processor.py  helpers.py  helpers.py.backup  logger.py  models.py  server.py  slash_commands.py  streaming_handler.py  system_prompt.py  tool_executor.py  widget_cache.py  widget_handler.py  widgets.json  widgets.py
src/: agents.rs  cache.rs  engine.rs  lib.rs  lsp.rs  main.rs
wheelhouse/: .gitattributes  CHECKSUMS.sha256  README.md  requirements-linux-aarch64.txt  requirements-linux-amd64.txt  requirements-macos-arm64.txt  requirements-macos-x86_64.txt  requirements-windows-amd64.txt  requirements-windows-arm64.txt  snowflake_ai-0.1.0-cp310-cp310-macosx_10_12_x86_64.whl  snowflake_ai-0.1.0-cp310-cp310-macosx_10_12_x86_64.whl.sha256  snowflake_ai-0.1.0-cp310-cp310-macosx_11_0_arm64.whl  snowflake_ai-0.1.0-cp310-cp310-macosx_11_0_arm64.whl.sha256  snowflake_ai-0.1.0-cp310-cp310-macosx_15_0_arm64.whl.sha256  snowflake_ai-0.1.0-cp310-cp310-macosx_15_0_x86_64.whl.sha256  snowflake_ai-0.1.0-cp310-cp310-manylinux_2_34_x86_64.whl  snowflake_ai-0.1.0-cp310-cp310-manylinux_2_34_x86_64.whl.sha256  snowflake_ai-0.1.0-cp310-cp310-manylinux_2_38_aarch64.whl  snowflake_ai-0.1.0-cp310-cp310-manylinux_2_38_aarch64.whl.sha256  snowflake_ai-0.1.0-cp310-cp310-manylinux_2_39_aarch64.whl.sha256  snowflake_ai-0.1.0-cp310-cp310-manylinux_2_39_x86_64.whl.sha256  snowflake_ai-0.1.0-cp310-cp310-win_amd64.whl  snowflake_ai-0.1.0-cp310-cp310-win_amd64.whl.sha256  snowflake_ai-0.1.0-cp311-cp311-macosx_10_12_x86_64.whl  snowflake_ai-0.1.0-cp311-cp311-macosx_10_12_x86_64.whl.sha256  snowflake_ai-0.1.0-cp311-cp311-macosx_11_0_arm64.whl  snowflake_ai-0.1.0-cp311-cp311-macosx_11_0_arm64.whl.sha256  snowflake_ai-0.1.0-cp311-cp311-macosx_15_0_arm64.whl.sha256  snowflake_ai-0.1.0-cp311-cp311-macosx_15_0_x86_64.whl.sha256  snowflake_ai-0.1.0-cp311-cp311-manylinux_2_34_x86_64.whl  snowflake_ai-0.1.0-cp311-cp311-manylinux_2_34_x86_64.whl.sha256  snowflake_ai-0.1.0-cp311-cp311-manylinux_2_38_aarch64.whl  snowflake_ai-0.1.0-cp311-cp311-manylinux_2_38_aarch64.whl.sha256  snowflake_ai-0.1.0-cp311-cp311-manylinux_2_39_aarch64.whl.sha256  snowflake_ai-0.1.0-cp311-cp311-manylinux_2_39_x86_64.whl.sha256  snowflake_ai-0.1.0-cp311-cp311-win_amd64.whl  snowflake_ai-0.1.0-cp311-cp311-win_amd64.whl.sha256  snowflake_ai-0.1.0-cp311-cp311-win_arm64.whl  snowflake_ai-0.1.0-cp311-cp311-win_arm64.whl.sha256  snowflake_ai-0.1.0-cp312-cp312-macosx_10_12_x86_64.whl  (+32 more)
