[package]
name = "snowflake"
version = "0.1.0"
edition = "2021"

[lib]
name = "snowflake_ai"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dotenvy = "0.15"
snowflake-connector-rs = "0.4"
tower-lsp = "0.20"
dashmap = "6"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "stream"] }
pyo3 = { version = "0.27.1", features = ["extension-module", "experimental-async", "serde", "generate-import-lib"] }
futures = "0.3"
eventsource-stream = "0.2"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1.3"
once_cell = "1.21.3"
rusqlite = { version = "0.30.0", features = ["sqlcipher", "bundled"] }
tokio-rusqlite = "0.5"
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
percent-encoding = "2.3.2"
base64 = "0.21"
which = "6.0.1"
flate2 = "1.0"

[target.'cfg(windows)'.dependencies]
openssl-sys = { version = "0.9", features = [] }  

[target.'cfg(target_os = "macos")'.dependencies]
rusqlite = { version = "0.30.0", features = ["sqlcipher"] }

[features]
extension-module = ["pyo3/extension-module"]
