[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "snowflake-ai"
version = "0.1.0"
description = "OpenBB AI Agent for Snowflake AI_COMPLETE"
requires-python = ">=3.10,<3.14"
dependencies = [
    "sse-starlette",
    "openbb-core",
    "openbb-platform-api",
    "openbb-ai",
]

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "snowflake_ai._snowflake_ai"
