[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "openbb-snowflake-ai"
version = "0.1.0"
description = "Python bindings for Snowflake AI_COMPLETE with SSE support"
requires-python = ">=3.10,<3.14"
dependencies = [
    "sse-starlette",
    "openbb-core",
    "openbb-platform-api",
    "openbb-ai",
]

[tool.maturin]
features = ["python"]
module-name = "openbb_snowflake_ai.snowflake_ai"
